fixed overflow table

--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -83,6 +83,9 @@ a.nav-link {
 /* .main-container {
 	margin-left: 18%;
 } */
+.container {
+	overflow: auto;
+}
 
 .component {
 	margin-bottom: 40px;
